# auth-utils

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: integration-guide.md
src/auth_utils/: __init__.py  cli.py  config.py
src/auth_utils/calendar/: __init__.py  client.py
src/auth_utils/docs/: __init__.py  client.py
src/auth_utils/drive/: __init__.py  client.py
src/auth_utils/email/: __init__.py  exceptions.py  imap.py  smtp.py
src/auth_utils/email/providers/: __init__.py  base.py  gmail.py
src/auth_utils/gmail/: __init__.py  client.py
src/auth_utils/google/: __init__.py  exceptions.py  oauth.py  service_account.py
src/auth_utils/llm/: __init__.py  client.py
src/auth_utils/llm/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/auth_utils/sheets/: __init__.py  client.py
src/auth_utils/tasks/: __init__.py  client.py
src/auth_utils/zotero/: __init__.py  client.py  exceptions.py
tests/: __init__.py  test_google_auth.py  test_llm_integration.py  test_zotero_auth.py
